src/com/gerixsoft/objc2xml/antlr/my/ObjectiveCParser.java
// $ANTLR 3.4 /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g 2012-10-18 19:54:47

// AUTOGENERATED BY ANTLR!!! DO NOT MODIFY!!!

package com.gerixsoft.objc2xml.antlr.my;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ObjectiveCParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Character", "Comment", "EscapeSequence", "Exponent", "FloatTypeSuffix", "FloatingPoint", "Hex", "HexDigit", "Identifier", "Integer", "IntegerTypeSuffix", "Letter", "LineCommand", "LineComment", "Octal", "OctalEscape", "String", "UnicodeEscape", "WS", "XML_ATTRIBUTE", "XML_ELEMENT", "'('", "')'", "'*'", "'+'", "','", "'-'", "'...'", "':'", "';'", "'<'", "'='", "'>'", "'@class'", "'@end'", "'@interface'", "'@optional'", "'@private'", "'@property'", "'@protected'", "'@protocol'", "'@public'", "'@required'", "'['", "']'", "'^'", "'enum'", "'struct'", "'typedef'", "'{'", "'|'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int Character=4;
    public static final int Comment=5;
    public static final int EscapeSequence=6;
    public static final int Exponent=7;
    public static final int FloatTypeSuffix=8;
    public static final int FloatingPoint=9;
    public static final int Hex=10;
    public static final int HexDigit=11;
    public static final int Identifier=12;
    public static final int Integer=13;
    public static final int IntegerTypeSuffix=14;
    public static final int Letter=15;
    public static final int LineCommand=16;
    public static final int LineComment=17;
    public static final int Octal=18;
    public static final int OctalEscape=19;
    public static final int String=20;
    public static final int UnicodeEscape=21;
    public static final int WS=22;
    public static final int XML_ATTRIBUTE=23;
    public static final int XML_ELEMENT=24;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ObjectiveCParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ObjectiveCParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ObjectiveCParser.tokenNames; }
    public String getGrammarFileName() { return "/home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g"; }


    public static class translation_unit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "translation_unit"
    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:25:1: translation_unit : ( external_declaration )+ EOF -> ^( XML_ELEMENT[\"objective-c\"] ( external_declaration )+ ) ;
    public final ObjectiveCParser.translation_unit_return translation_unit() throws RecognitionException {
        ObjectiveCParser.translation_unit_return retval = new ObjectiveCParser.translation_unit_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        ObjectiveCParser.external_declaration_return external_declaration1 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_external_declaration=new RewriteRuleSubtreeStream(adaptor,"rule external_declaration");
        try {
            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:25:18: ( ( external_declaration )+ EOF -> ^( XML_ELEMENT[\"objective-c\"] ( external_declaration )+ ) )
            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:26:2: ( external_declaration )+ EOF
            {
            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:26:2: ( external_declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Identifier||LA1_0==37||LA1_0==39||LA1_0==44||(LA1_0 >= 50 && LA1_0 <= 52)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:26:2: external_declaration
            	    {
            	    pushFollow(FOLLOW_external_declaration_in_translation_unit60);
            	    external_declaration1=external_declaration();

            	    state._fsp--;

            	    stream_external_declaration.add(external_declaration1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_translation_unit63);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: external_declaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 27:2: -> ^( XML_ELEMENT[\"objective-c\"] ( external_declaration )+ )
            {
                // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:27:4: ^( XML_ELEMENT[\"objective-c\"] ( external_declaration )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(XML_ELEMENT, "objective-c")
                , root_1);

                if ( !(stream_external_declaration.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_external_declaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_external_declaration.nextTree());

                }
                stream_external_declaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "translation_unit"


    public static class external_declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "external_declaration"
    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:30:1: external_declaration : ( ignore_enum | ignore_struct | ignore_typedef | interface_declaration | class_declaration_list | macro_call ( ';' )? );
    public final ObjectiveCParser.external_declaration_return external_declaration() throws RecognitionException {
        ObjectiveCParser.external_declaration_return retval = new ObjectiveCParser.external_declaration_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal9=null;
        ObjectiveCParser.ignore_enum_return ignore_enum3 =null;

        ObjectiveCParser.ignore_struct_return ignore_struct4 =null;

        ObjectiveCParser.ignore_typedef_return ignore_typedef5 =null;

        ObjectiveCParser.interface_declaration_return interface_declaration6 =null;

        ObjectiveCParser.class_declaration_list_return class_declaration_list7 =null;

        ObjectiveCParser.macro_call_return macro_call8 =null;


        Object char_literal9_tree=null;

        try {
            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:30:22: ( ignore_enum | ignore_struct | ignore_typedef | interface_declaration | class_declaration_list | macro_call ( ';' )? )
            int alt3=6;
            switch ( input.LA(1) ) {
            case 50:
                {
                alt3=1;
                }
                break;
            case 51:
                {
                alt3=2;
                }
                break;
            case 52:
                {
                alt3=3;
                }
                break;
            case 39:
            case 44:
                {
                alt3=4;
                }
                break;
            case 37:
                {
                alt3=5;
                }
                break;
            case Identifier:
                {
                alt3=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:31:2: ignore_enum
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ignore_enum_in_external_declaration85);
                    ignore_enum3=ignore_enum();

                    state._fsp--;

                    adaptor.addChild(root_0, ignore_enum3.getTree());

                    }
                    break;
                case 2 :
                    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:32:4: ignore_struct
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ignore_struct_in_external_declaration90);
                    ignore_struct4=ignore_struct();

                    state._fsp--;

                    adaptor.addChild(root_0, ignore_struct4.getTree());

                    }
                    break;
                case 3 :
                    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:33:4: ignore_typedef
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ignore_typedef_in_external_declaration95);
                    ignore_typedef5=ignore_typedef();

                    state._fsp--;

                    adaptor.addChild(root_0, ignore_typedef5.getTree());

                    }
                    break;
                case 4 :
                    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:34:4: interface_declaration
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_interface_declaration_in_external_declaration100);
                    interface_declaration6=interface_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, interface_declaration6.getTree());

                    }
                    break;
                case 5 :
                    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:35:4: class_declaration_list
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_class_declaration_list_in_external_declaration105);
                    class_declaration_list7=class_declaration_list();

                    state._fsp--;

                    adaptor.addChild(root_0, class_declaration_list7.getTree());

                    }
                    break;
                case 6 :
                    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:36:4: macro_call ( ';' )?
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_macro_call_in_external_declaration110);
                    macro_call8=macro_call();

                    state._fsp--;

                    adaptor.addChild(root_0, macro_call8.getTree());

                    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:36:15: ( ';' )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==33) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:36:15: ';'
                            {
                            char_literal9=(Token)match(input,33,FOLLOW_33_in_external_declaration112); 
                            char_literal9_tree = 
                            (Object)adaptor.create(char_literal9)
                            ;
                            adaptor.addChild(root_0, char_literal9_tree);


                            }
                            break;

                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "external_declaration"


    public static class ignore_braces_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ignore_braces"
    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:39:1: ignore_braces : '{' ( ignore_braces | constant | '*' | ';' | '[' | ']' | ':' | '=' | ',' | '(' | ')' | '-' | '<' | '>' | '|' | '^' | '@private' | '@protected' | '@public' | 'enum' | 'struct' )* '}' ;
    public final ObjectiveCParser.ignore_braces_return ignore_braces() throws RecognitionException {
        ObjectiveCParser.ignore_braces_return retval = new ObjectiveCParser.ignore_braces_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal10=null;
        Token char_literal13=null;
        Token char_literal14=null;
        Token char_literal15=null;
        Token char_literal16=null;
        Token char_literal17=null;
        Token char_literal18=null;
        Token char_literal19=null;
        Token char_literal20=null;
        Token char_literal21=null;
        Token char_literal22=null;
        Token char_literal23=null;
        Token char_literal24=null;
        Token char_literal25=null;
        Token char_literal26=null;
        Token string_literal27=null;
        Token string_literal28=null;
        Token string_literal29=null;
        Token string_literal30=null;
        Token string_literal31=null;
        Token char_literal32=null;
        ObjectiveCParser.ignore_braces_return ignore_braces11 =null;

        ObjectiveCParser.constant_return constant12 =null;


        Object char_literal10_tree=null;
        Object char_literal13_tree=null;
        Object char_literal14_tree=null;
        Object char_literal15_tree=null;
        Object char_literal16_tree=null;
        Object char_literal17_tree=null;
        Object char_literal18_tree=null;
        Object char_literal19_tree=null;
        Object char_literal20_tree=null;
        Object char_literal21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal23_tree=null;
        Object char_literal24_tree=null;
        Object char_literal25_tree=null;
        Object char_literal26_tree=null;
        Object string_literal27_tree=null;
        Object string_literal28_tree=null;
        Object string_literal29_tree=null;
        Object string_literal30_tree=null;
        Object string_literal31_tree=null;
        Object char_literal32_tree=null;

        try {
            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:39:15: ( '{' ( ignore_braces | constant | '*' | ';' | '[' | ']' | ':' | '=' | ',' | '(' | ')' | '-' | '<' | '>' | '|' | '^' | '@private' | '@protected' | '@public' | 'enum' | 'struct' )* '}' )
            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:40:2: '{' ( ignore_braces | constant | '*' | ';' | '[' | ']' | ':' | '=' | ',' | '(' | ')' | '-' | '<' | '>' | '|' | '^' | '@private' | '@protected' | '@public' | 'enum' | 'struct' )* '}'
            {
            root_0 = (Object)adaptor.nil();


            char_literal10=(Token)match(input,53,FOLLOW_53_in_ignore_braces124); 
            char_literal10_tree = 
            (Object)adaptor.create(char_literal10)
            ;
            adaptor.addChild(root_0, char_literal10_tree);


            // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:41:2: ( ignore_braces | constant | '*' | ';' | '[' | ']' | ':' | '=' | ',' | '(' | ')' | '-' | '<' | '>' | '|' | '^' | '@private' | '@protected' | '@public' | 'enum' | 'struct' )*
            loop4:
            do {
                int alt4=22;
                switch ( input.LA(1) ) {
                case 53:
                    {
                    alt4=1;
                    }
                    break;
                case Hex:
                case Identifier:
                case Integer:
                    {
                    alt4=2;
                    }
                    break;
                case 27:
                    {
                    alt4=3;
                    }
                    break;
                case 33:
                    {
                    alt4=4;
                    }
                    break;
                case 47:
                    {
                    alt4=5;
                    }
                    break;
                case 48:
                    {
                    alt4=6;
                    }
                    break;
                case 32:
                    {
                    alt4=7;
                    }
                    break;
                case 35:
                    {
                    alt4=8;
                    }
                    break;
                case 29:
                    {
                    alt4=9;
                    }
                    break;
                case 25:
                    {
                    alt4=10;
                    }
                    break;
                case 26:
                    {
                    alt4=11;
                    }
                    break;
                case 30:
                    {
                    alt4=12;
                    }
                    break;
                case 34:
                    {
                    alt4=13;
                    }
                    break;
                case 36:
                    {
                    alt4=14;
                    }
                    break;
                case 54:
                    {
                    alt4=15;
                    }
                    break;
                case 49:
                    {
                    alt4=16;
                    }
                    break;
                case 41:
                    {
                    alt4=17;
                    }
                    break;
                case 43:
                    {
                    alt4=18;
                    }
                    break;
                case 45:
                    {
                    alt4=19;
                    }
                    break;
                case 50:
                    {
                    alt4=20;
                    }
                    break;
                case 51:
                    {
                    alt4=21;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:42:2: ignore_braces
            	    {
            	    pushFollow(FOLLOW_ignore_braces_in_ignore_braces130);
            	    ignore_braces11=ignore_braces();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ignore_braces11.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:43:4: constant
            	    {
            	    pushFollow(FOLLOW_constant_in_ignore_braces135);
            	    constant12=constant();

            	    state._fsp--;

            	    adaptor.addChild(root_0, constant12.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:44:4: '*'
            	    {
            	    char_literal13=(Token)match(input,27,FOLLOW_27_in_ignore_braces140); 
            	    char_literal13_tree = 
            	    (Object)adaptor.create(char_literal13)
            	    ;
            	    adaptor.addChild(root_0, char_literal13_tree);


            	    }
            	    break;
            	case 4 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:45:4: ';'
            	    {
            	    char_literal14=(Token)match(input,33,FOLLOW_33_in_ignore_braces145); 
            	    char_literal14_tree = 
            	    (Object)adaptor.create(char_literal14)
            	    ;
            	    adaptor.addChild(root_0, char_literal14_tree);


            	    }
            	    break;
            	case 5 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:46:4: '['
            	    {
            	    char_literal15=(Token)match(input,47,FOLLOW_47_in_ignore_braces150); 
            	    char_literal15_tree = 
            	    (Object)adaptor.create(char_literal15)
            	    ;
            	    adaptor.addChild(root_0, char_literal15_tree);


            	    }
            	    break;
            	case 6 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:47:4: ']'
            	    {
            	    char_literal16=(Token)match(input,48,FOLLOW_48_in_ignore_braces155); 
            	    char_literal16_tree = 
            	    (Object)adaptor.create(char_literal16)
            	    ;
            	    adaptor.addChild(root_0, char_literal16_tree);


            	    }
            	    break;
            	case 7 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:48:4: ':'
            	    {
            	    char_literal17=(Token)match(input,32,FOLLOW_32_in_ignore_braces160); 
            	    char_literal17_tree = 
            	    (Object)adaptor.create(char_literal17)
            	    ;
            	    adaptor.addChild(root_0, char_literal17_tree);


            	    }
            	    break;
            	case 8 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:49:4: '='
            	    {
            	    char_literal18=(Token)match(input,35,FOLLOW_35_in_ignore_braces165); 
            	    char_literal18_tree = 
            	    (Object)adaptor.create(char_literal18)
            	    ;
            	    adaptor.addChild(root_0, char_literal18_tree);


            	    }
            	    break;
            	case 9 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:50:4: ','
            	    {
            	    char_literal19=(Token)match(input,29,FOLLOW_29_in_ignore_braces170); 
            	    char_literal19_tree = 
            	    (Object)adaptor.create(char_literal19)
            	    ;
            	    adaptor.addChild(root_0, char_literal19_tree);


            	    }
            	    break;
            	case 10 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:51:4: '('
            	    {
            	    char_literal20=(Token)match(input,25,FOLLOW_25_in_ignore_braces175); 
            	    char_literal20_tree = 
            	    (Object)adaptor.create(char_literal20)
            	    ;
            	    adaptor.addChild(root_0, char_literal20_tree);


            	    }
            	    break;
            	case 11 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:52:4: ')'
            	    {
            	    char_literal21=(Token)match(input,26,FOLLOW_26_in_ignore_braces180); 
            	    char_literal21_tree = 
            	    (Object)adaptor.create(char_literal21)
            	    ;
            	    adaptor.addChild(root_0, char_literal21_tree);


            	    }
            	    break;
            	case 12 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:53:4: '-'
            	    {
            	    char_literal22=(Token)match(input,30,FOLLOW_30_in_ignore_braces185); 
            	    char_literal22_tree = 
            	    (Object)adaptor.create(char_literal22)
            	    ;
            	    adaptor.addChild(root_0, char_literal22_tree);


            	    }
            	    break;
            	case 13 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:54:4: '<'
            	    {
            	    char_literal23=(Token)match(input,34,FOLLOW_34_in_ignore_braces190); 
            	    char_literal23_tree = 
            	    (Object)adaptor.create(char_literal23)
            	    ;
            	    adaptor.addChild(root_0, char_literal23_tree);


            	    }
            	    break;
            	case 14 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:55:4: '>'
            	    {
            	    char_literal24=(Token)match(input,36,FOLLOW_36_in_ignore_braces195); 
            	    char_literal24_tree = 
            	    (Object)adaptor.create(char_literal24)
            	    ;
            	    adaptor.addChild(root_0, char_literal24_tree);


            	    }
            	    break;
            	case 15 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:56:4: '|'
            	    {
            	    char_literal25=(Token)match(input,54,FOLLOW_54_in_ignore_braces200); 
            	    char_literal25_tree = 
            	    (Object)adaptor.create(char_literal25)
            	    ;
            	    adaptor.addChild(root_0, char_literal25_tree);


            	    }
            	    break;
            	case 16 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:57:4: '^'
            	    {
            	    char_literal26=(Token)match(input,49,FOLLOW_49_in_ignore_braces205); 
            	    char_literal26_tree = 
            	    (Object)adaptor.create(char_literal26)
            	    ;
            	    adaptor.addChild(root_0, char_literal26_tree);


            	    }
            	    break;
            	case 17 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:58:4: '@private'
            	    {
            	    string_literal27=(Token)match(input,41,FOLLOW_41_in_ignore_braces210); 
            	    string_literal27_tree = 
            	    (Object)adaptor.create(string_literal27)
            	    ;
            	    adaptor.addChild(root_0, string_literal27_tree);


            	    }
            	    break;
            	case 18 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:59:4: '@protected'
            	    {
            	    string_literal28=(Token)match(input,43,FOLLOW_43_in_ignore_braces215); 
            	    string_literal28_tree = 
            	    (Object)adaptor.create(string_literal28)
            	    ;
            	    adaptor.addChild(root_0, string_literal28_tree);


            	    }
            	    break;
            	case 19 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:60:4: '@public'
            	    {
            	    string_literal29=(Token)match(input,45,FOLLOW_45_in_ignore_braces220); 
            	    string_literal29_tree = 
            	    (Object)adaptor.create(string_literal29)
            	    ;
            	    adaptor.addChild(root_0, string_literal29_tree);


            	    }
            	    break;
            	case 20 :
            	    // /home/andriy/Projects.git/objc2xml/src/com/gerixsoft/objc2xml/antlr/my/ObjectiveC.g:61:4: 'enum'
            	    {
            	    string_literal30=(Token)match(input,50,FOLLOW_50_in_ignore_braces225); 
            	    string_literal30_tree = 
            	    (Object)adaptor.create(string_literal30)
            	    ;
            	    adaptor.addChild(root_0, string_literal30_tree);

